--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "baseUrl": "./src"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "test"]
 }
